--- a/EMStest1/.classpath
+++ b/EMStest1/.classpath
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-17">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
@@ -13,6 +13,7 @@
 	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.web.container"/>
 	<classpathentry kind="con" path="org.eclipse.jst.j2ee.internal.module.container"/>
-	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/jdk1.6.0_07/jre/lib/ext/mssql-jdbc-12.4.0.jre11.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qkrgp/Downloads/sqljdbc_12.4/kor/jars/mssql-jdbc-12.4.0.jre8.jar"/>
+	<classpathentry kind="lib" path="C:/Users/qkrgp/Downloads/sqljdbc_12.4/kor/jars/mssql-jdbc-12.4.0.jre11.jar"/>
 	<classpathentry kind="output" path="build/classes"/>
 </classpath>
