--- a/Test1/.classpath
+++ b/Test1/.classpath
@@ -6,5 +6,6 @@
 		</attributes>
 	</classpathentry>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/jdk1.6.0_07/jre/lib/ext/mssql-jdbc-12.4.0.jre11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
