--- a/SocketChatting_test/.project
+++ b/SocketChatting_test/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>SocketChatting2</name>
+	<name>SocketChatting_test</name>
 	<comment></comment>
 	<projects>
 	</projects>
