work with user service

--- a/jarDB/config/config.properties
+++ b/jarDB/config/config.properties
@@ -1,7 +1,11 @@
-db_ip = 192.168.50.107
-db_port = 1433
-db_name = hw_db
+# DB Info
+db_url = jdbc:sqlserver://192.168.50.107:1433;databaseName=hw_db;encrypt=true;trustServerCertificate=true;characterEncoding=UTF-8;serverTimezone=UTC
 db_user = phw
 db_password = 1111
 
-sql_query=SELECT * FROM EmsUsers; 
+# Query
+select_all_users = select * from EmsUsers order by empNum desc
+select_user_by_empNum = select * from EmsUsers where empNum = 48
+insert_users_sql = insert into EmsUsers (name, email, department) values ('NewName', 'NewEmail','NewDepartment')
+delete_users_sql = delete from EmsUsers where empNum = 48
+update_users_sql = update EmsUsers set name = 'EditName',email= 'EditEmail', department ='EditDep' where empNum = 48 
