--- a/jarDB/.classpath
+++ b/jarDB/.classpath
@@ -6,10 +6,6 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/qkrgp/.m2/repository/org/mybatis/mybatis/3.5.9/mybatis-3.5.9.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/jdk1.6.0_07/jre/lib/ext/mssql-jdbc-12.4.0.jre11.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
