--- a/sqlConnectTEst/.classpath
+++ b/sqlConnectTEst/.classpath
@@ -1,15 +1,12 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/qkrgp/OneDrive/바탕 화면/tmp/TestJar.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/Java/jdk1.6.0_07/jre/lib/ext/mssql-jdbc-12.4.0.jre11.jar"/>
+	<classpathentry kind="lib" path="C:/study/assignment2/JAVAassignment/sqlConnectTEst/src/jarDB.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
