--- a/MonitoringTest/.project
+++ b/MonitoringTest/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>jarDB0</name>
+	<name>MonitoringTest</name>
 	<comment></comment>
 	<projects>
 	</projects>
