--- a/websocket/pom.xml
+++ b/websocket/pom.xml
@@ -6,18 +6,18 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>Hyewon</groupId>
-	<artifactId>WebSocketMonitoring</artifactId>
+	<artifactId>websocket</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 
-	<name>WebSocketMonitoring Maven Webapp</name>
+	<name>websocket Maven Webapp</name>
 	<!-- FIXME change it to the project's website -->
 	<url>http://www.example.com</url>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<maven.compiler.source>11</maven.compiler.source>
-		<maven.compiler.target>11</maven.compiler.target>
+		<maven.compiler.source>1.8</maven.compiler.source>
+		<maven.compiler.target>1.8</maven.compiler.target>
 	</properties>
 
 	<dependencies>
@@ -28,39 +28,19 @@
 			<scope>test</scope>
 		</dependency>
 
-		<!-- https://mvnrepository.com/artifact/org.glassfish.tyrus/tyrus-server -->
-		<!-- <dependency>
+	
+		<!-- javax.websocket -->
+		<dependency>
+			<groupId>javax.websocket</groupId>
+			<artifactId>javax.websocket-api</artifactId>
+			<version>1.1</version>
+		</dependency>
+		<!-- -->
+
+		<dependency>
 			<groupId>org.glassfish.tyrus</groupId>
-			<artifactId>tyrus-server</artifactId>
-			<version>1.17</version>
-		</dependency> -->
-
-
-		<!-- jakarta.servlet-api -->
-		<dependency>
-			<groupId>jakarta.servlet</groupId>
-			<artifactId>jakarta.servlet-api</artifactId>
-			<version>5.0.0</version> <!-- 사용하는 Servlet API 버전에 따라 버전을 조정하세요 -->
-			<scope>provided</scope>
-		</dependency>
-
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-websocket</artifactId>
-			<version>5.0.7.RELEASE</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.11.3</version>
-		</dependency>
-
-		<!-- https://mvnrepository.com/artifact/org.java-websocket/Java-WebSocket -->
-		<dependency>
-			<groupId>org.java-websocket</groupId>
-			<artifactId>Java-WebSocket</artifactId>
-			<version>1.5.3</version>
+			<artifactId>tyrus-client</artifactId>
+			<version>1.14</version>
 		</dependency>
 
 
@@ -68,7 +48,7 @@
 	</dependencies>
 
 	<build>
-		<finalName>WebSocketMonitoring</finalName>
+		<finalName>websocket</finalName>
 		<pluginManagement><!-- lock down plugins versions to avoid using Maven 
 				defaults (may be moved to parent pom) -->
 			<plugins>
