--- a/ServerSocekt/.classpath
+++ b/ServerSocekt/.classpath
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path=""/>
-	<classpathentry kind="lib" path="C:/study/assignment/sqlConnectTEst/src/jarDB2.jar"/>
-	<classpathentry kind="lib" path="C:/study/assignment/sqlConnectTEst/src/jarDB.jar"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-11">
 		<attributes>
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="lib" path="C:/study/assignment/ServerSocekt/src/Java-WebSocket-1.5.4.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
